--- a/deks-merek-wizzsausage.html
+++ b/deks-merek-wizzsausage.html
@@ -47,7 +47,7 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <img src="img/logomeraki.png" alt="Logo">
+                    <img src="img/logomeraki.png" alt="Logo"> 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -87,61 +87,74 @@
         <!-- Navbar & Hero End -->
 
         <!-- Project Start -->
+        <!-- <div class="container-xxl py-5"> -->
+            <div class="container-dekspro py-4 px-lg-5 detail" id="01">
+                <div class="row g-5 align-items-center">
+                    <div class="col-lg-6">
+                        <img class="img w-50" src="img/wizz_sausage_original.jpg">
+                    </div>
+                    <div class="col-lg-6 dekspro">
+                        <h1 class="mb-5">Wizz Sausage Original</h1>
+                        <p class="mb-4">Deksripsi produk</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <!--Produk Item-->
         <div class="container-xxl py-5">
             <div class="container py-5 px-lg-5">
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6">
-                        <a class="btn product-item-overlay" onclick="off()" href="">
-                        <div class="product-item d-flex flex-column text-center" id="">
+                        <div class="product-item d-flex flex-column text-center button" id="01">
                             <img class="img-fluid w-100 " src="img/wizz_sausage_original.jpg"> 
                             <div class="product-item label">
                                 Wizz Sausage - Original 250gr
                             </div>
                         </div> 
-                    </div></a>
-                    <div class="col-lg-4 col-md-6">
-                        <a href="" class="product-link" onclick="showDetails()">
-                        <div class="product-item d-flex flex-column text-center" id="">
-                            <img class="img-fluid w-100 " src="img/wizz_sausage_cheese.jpg"> 
-                            <div class="product-item label">
-                                Wizz Sausage - Cheese 250gr
-                            </div>
-                            <div class="overlay">
-                                <div class="text">Click for details</div>
-                            </div>
-                        </div></a>
                     </div>
-                    <div id="product-details" class="modal">
-                        <div class="modal-content">
-                            <span class="close" onclick="hideDetails()">&times</span>
-                            <h2>Produk Detail</h2>
-                            <p>description of the product goes here</p>
-                            <p>Price: </p>
+                        <!-- <div class="col-lg-4 col-md-6">
+                            <a href="" class="product-link" onclick="showDetails()">
+                            <div class="product-item d-flex flex-column text-center" id="">
+                                <img class="img-fluid w-100 " src="img/wizz_sausage_cheese.jpg"> 
+                                <div class="product-item label">
+                                    Wizz Sausage - Cheese 250gr
+                                </div>
+                                <div class="overlay">
+                                    <div class="text">Click for details</div>
+                                </div>
+                            </div></a>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 ">
-                        <a href="">
-                        <div class="product-item d-flex flex-column text-center" id="">
-                            <img class="img-fluid w-100 " src="img/wizz_sausage_blackpepper.jpg"> 
-                            <div class="product-item label">
-                                Wizz Sausage - Blackpepper 250gr
+                        <div id="product-details" class="modal">
+                            <div class="modal-content">
+                                <span class="close" onclick="hideDetails()">&times</span>
+                                <h2>Produk Detail</h2>
+                                <p>description of the product goes here</p>
+                                <p>Price: </p>
                             </div>
-                        </div></a>
-                    </div>    
-                    <div class="col-lg-4 col-md-6">
-                        <a href="">
-                        <div class="product-item d-flex flex-column text-center" id="">
-                            <img class="img-fluid w-100 " src="img/wizz_sausage_basil.jpg"> 
-                            <div class="product-item label">
-                                Wizz Sausage - Basil 250gr
-                            </div>
-                        </div></a>
+                        </div>
+                        <div class="col-lg-4 col-md-6 ">
+                            <a href="">
+                            <div class="product-item d-flex flex-column text-center" id="">
+                                <img class="img-fluid w-100 " src="img/wizz_sausage_blackpepper.jpg"> 
+                                <div class="product-item label">
+                                    Wizz Sausage - Blackpepper 250gr
+                                </div>
+                            </div></a>
+                        </div>    
+                        <div class="col-lg-4 col-md-6">
+                            <a href="">
+                            <div class="product-item d-flex flex-column text-center" id="">
+                                <img class="img-fluid w-100 " src="img/wizz_sausage_basil.jpg"> 
+                                <div class="product-item label">
+                                    Wizz Sausage - Basil 250gr
+                                </div>
+                            </div></a>
+                        </div> -->
                     </div>
                 </div>
             </div>
-        </div>
-
-    </div>
+        </div>       
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
