--- a/deks-merek-wizzsausage.html
+++ b/deks-merek-wizzsausage.html
@@ -86,7 +86,21 @@
 
         <!-- Project Start -->
         <!--Detail Product-->
-        <div class="container align-items-center content">
+        <div class="container-xl">
+            <div class="row base-dekripsi detail" id="01">
+                <div class="base col-md-4">
+                    <div class="base-body align-items-center">
+                        <img class="img-fluid" src="img/wizz_sausage_original.jpg">
+                    </div>
+                </div>
+                <div class="base col-md-8 dekripsi-konten">
+                    <h3 class="text-white text-capitalize">Wizz Sausage - Original</h3>
+                    <div class="content">Detail Produk</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="container align-items-center content">
             <div class="detail" id="01">
                 <div class="product-description">
                     <div class="product-image col-lg-6 align-items-center">
@@ -135,7 +149,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!--Detail Product-->
 
         <!--Produk Item-->
