astaga finally dekripsi produk done, tinggal copas

--- a/deks-merek-wizzsausage.html
+++ b/deks-merek-wizzsausage.html
@@ -86,7 +86,7 @@
 
         <!-- Project Start -->
         <!--Detail Product-->
-        <div class="container-xl">
+        <div class="container-dekspro">
             <div class="row base-dekripsi detail" id="01">
                 <div class="base col-md-4">
                     <div class="base-body align-items-center">
@@ -98,58 +98,40 @@
                     <div class="content">Detail Produk</div>
                 </div>
             </div>
-        </div>
-
-        <!-- <div class="container align-items-center content">
-            <div class="detail" id="01">
-                <div class="product-description">
-                    <div class="product-image col-lg-6 align-items-center">
-                        <img class="img-fluid w-50" src="img/wizz_sausage_original.jpg" alt="Product Image">
-                    </div>
-                    <div class="description col-lg-6 align-items-center">
-                        <h2 class="text-white">Product Title</h2>
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis libero ut ultricies dignissim. Donec eu feugiat mauris. Sed vel risus in ligula convallis tristique.</p>
-                        <p class="text-white">Price: $XX.XX</p>
+            <div class="row base-dekripsi detail" id="02">
+                <div class="base col-md-4">
+                    <div class="base-body align-items-center">
+                        <img class="img-fluid" src="img/wizz_sausage_cheese.jpg">
                     </div>
                 </div>
-            </div>
-            <div class="detail" id="02">
-                <div class="product-description">
-                    <div class="product-image col-lg-6 align-items-center">
-                        <img class="img-fluid w-50" src="img/wizz_sausage_cheese.jpg" alt="Product Image">
-                    </div>
-                    <div class="description col-lg-6 align-items-center">
-                        <h2 class="text-white">Product Title</h2>
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis libero ut ultricies dignissim. Donec eu feugiat mauris. Sed vel risus in ligula convallis tristique.</p>
-                        <p class="text-white">Price: $XX.XX</p>
-                    </div>
+                <div class="base col-md-8 dekripsi-konten">
+                    <h3 class="text-white text-capitalize">Wizz Sausage - Cheese</h3>
+                    <div class="content">Detail Produk</div>
                 </div>
             </div>
-            <div class="detail" id="03">
-                <div class="product-description">
-                    <div class="product-image col-lg-6 align-items-center">
-                        <img class="img-fluid w-50" src="img/wizz_sausage_blackpepper.jpg" alt="Product Image">
-                    </div>
-                    <div class="description col-lg-6 align-items-center">
-                        <h2 class="text-white">Product Title</h2>
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis libero ut ultricies dignissim. Donec eu feugiat mauris. Sed vel risus in ligula convallis tristique.</p>
-                        <p class="text-white">Price: $XX.XX</p>
+            <div class="row base-dekripsi detail" id="03">
+                <div class="base col-md-4">
+                    <div class="base-body align-items-center">
+                        <img class="img-fluid" src="img/wizz_sausage_blackpepper.jpg">
                     </div>
                 </div>
-            </div>
-            <div class="detail" id="04">
-                <div class="product-description">
-                    <div class="product-image col-lg-6 align-items-center">
-                        <img class="img-fluid w-50" src="img/wizz_sausage_basil.jpg" alt="Product Image">
-                    </div>
-                    <div class="description col-lg-6 align-items-center">
-                        <h2 class="text-white">Product Title</h2>
-                        <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis libero ut ultricies dignissim. Donec eu feugiat mauris. Sed vel risus in ligula convallis tristique.</p>
-                        <p class="text-white">Price: $XX.XX</p>
-                    </div>
+                <div class="base col-md-8 dekripsi-konten">
+                    <h3 class="text-white text-capitalize">Wizz Sausage - Blackpepper</h3>
+                    <div class="content">Detail Produk</div>
                 </div>
             </div>
-        </div> -->
+            <div class="row base-dekripsi detail" id="04">
+                <div class="base col-md-4">
+                    <div class="base-body align-items-center">
+                        <img class="img-fluid" src="img/wizz_sausage_basil.jpg">
+                    </div>
+                </div>
+                <div class="base col-md-8 dekripsi-konten">
+                    <h3 class="text-white text-capitalize">Wizz Sausage - Basil</h3>
+                    <div class="content">Detail Produk</div>
+                </div>
+            </div>
+       </div>
         <!--Detail Product-->
 
         <!--Produk Item-->
