--- a/merek.html
+++ b/merek.html
@@ -95,7 +95,6 @@
                                 <a href="deks-merek-wizzsausage.html">
                                     <div class="portfolio-overlay"></div>
                                 </a>
-                                
                             </div>
                             <div class="bg-light p-4">
                                 <h5 class="lh-base mb-0">Wizz Sausage</a>
@@ -106,10 +105,9 @@
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="img/wizz_bite.png" alt="">
-                                <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
-                                </div>
+                                <a href="deks-merek-wizzbite">
+                                    <div class="portfolio-overlay"></div>
+                                </a>
                             </div>
                             <div class="bg-light p-4">
                                 <h5 class="lh-base mb-0">Wizz Bites</a>
