--- a/merek.html
+++ b/merek.html
@@ -105,7 +105,7 @@
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="img/wizz_bite.png" alt="">
-                                <a href="deks-merek-wizzbite">
+                                <a href="deks-merek-wizzbite.html">
                                     <div class="portfolio-overlay"></div>
                                 </a>
                             </div>
@@ -147,8 +147,8 @@
         </div>
         <!-- Projects End -->
 
-         <!-- Footer Start -->
-         <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
+        <!-- Footer Start -->
+        <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
