--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,7 @@
                                 <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
                             </div>
                         </div>
+                        <a href="#" class="btn btn-outline-success btn-social col-md-2"><i class="col-sm-6 fab fa-whatsapp justify-content-start"></i></a>
                     </div>
                     
                     <div class="col-sm-6">
