--- a/deks-merek-wizzsausage.html
+++ b/deks-merek-wizzsausage.html
@@ -95,7 +95,10 @@
                         </div>
                         <div class="base col-md-8 dekripsi-konten">
                             <h3 class="text-white text-capitalize">Wizz Sausage - Original</h3>
-                            <div class="content">Detail Produk</div>
+                            <div class="content">
+                                Sosis ayam premium yang diproduksi dari bahan baku segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat dengan citarasa mewah. 
+                            </div>
+                            <div class="content">Berat: 250 gr</div>
                         </div>
                     </div>
                     <div class="row base-dekripsi detail" id="02">
@@ -106,7 +109,10 @@
                         </div>
                         <div class="base col-md-8 dekripsi-konten">
                             <h3 class="text-white text-capitalize">Wizz Sausage - Cheese</h3>
-                            <div class="content">Detail Produk</div>
+                            <div class="content">
+                                Sosis ayam premium yang diproduksi dari bahan baku segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat dengan citarasa mewah. 
+                            </div>
+                            <div class="content">Berat: 250 gr</div>
                         </div>
                     </div>
                     <div class="row base-dekripsi detail" id="03">
@@ -117,7 +123,10 @@
                         </div>
                         <div class="base col-md-8 dekripsi-konten">
                             <h3 class="text-white text-capitalize">Wizz Sausage - Blackpepper</h3>
-                            <div class="content">Detail Produk</div>
+                            <div class="content">
+                                Sosis ayam premium yang diproduksi dari bahan baku segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat dengan citarasa mewah. 
+                            </div>
+                            <div class="content">Berat: 250 gr</div>
                         </div>
                     </div>
                     <div class="row base-dekripsi detail" id="04">
@@ -128,7 +137,10 @@
                         </div>
                         <div class="base col-md-8 dekripsi-konten">
                             <h3 class="text-white text-capitalize">Wizz Sausage - Basil</h3>
-                            <div class="content">Detail Produk</div>
+                            <div class="content">
+                                Sosis ayam premium yang diproduksi dari bahan baku segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat dengan citarasa mewah. 
+                            </div>
+                            <div class="content">Berat: 250 gr</div>
                         </div>
                     </div>
             </div>
